    from long outputs from commands like COPY, TYPE,
    DIR /S, and ATTRIB /S. (Wengier)
  - Rewrote built-in TREE command instead of the one
    from FreeDOS to support long filenames. (Wengier)
  - DELTREE is now an external command appearing on
    drive Z: as DELTREE.EXE instead of a builtin shell
    command, since it is an external command in a real
    DOS system. (Wengier).
  - Added COLOR command to change current foreground
    and background colors. It usage is similar to the
    same-named command in the Windows command prompt.
    For example, command "COLOR fc" produces light red
    on bright white; COLOR without an argument restores
    the original color. (Wengier)
  - Added CHCP command to view current code page, or
    change the current code page in the TrueType font
    output. Supported code pages include 437, 808, 850,
    852, 853, 855, 857, 858, 860, 861, 862, 863, 864,
    865, 866, 869, 872, and 874. (Wengier)
  - Added function to automatically save states in the
    specified time interval (in seconds). You can also
    specify a save slot or start and end save slots to
    be used. For example, "autosave=10 11-20" will set
    a 10-second time interval for auto-saving, and the
    save slots used will be between 11 and 20. If no
    save slot is specified, then the current save slot
    will be used for auto-saving. Putting a minus sign
    before time interval causes the auto-saving function
    to not be activated at start. You can optionally
    also specify up to 9 program names for this feature,
    e.g. "autosave=10 11-20 EDIT:21-30 EDITOR:35" will
    cause program "EDIT" to use save slots 21-30, and
    "EDITOR" to use save slot 35, and other programs to
    use save slots 11-20. Added a menu option "Auto-save
    settings..." to manage the auto-saving feature at
    run-time. A menu option "Enable auto-saving state"
    is added to the "Save/load options" menu group under