@@ -296,6 +296,8 @@ public:
      */
 	void CMD_CHCP(char * args);
 	void CMD_COUNTRY(char * args);
+	void CMD_PUSHD(char * args);
+	void CMD_POPD(char * args);
     void CMD_TRUENAME(char * args);
     void CMD_DXCAPTURE(char * args);
 
